@@ -1212,3 +1212,36 @@ int blksum(double *sum, double *sumsq)
 	} else
 		return -1;
 }
+
+/* Get a (possibly square) block into a buffer */
+
+unsigned char *blkget()
+{
+	if (markv(1)) {
+		P *q;
+		unsigned char *buf=joe_malloc(markk->byte-markb->byte+1);
+		unsigned char *s=buf;
+		int x;
+		int c;
+		long left = markb->xcol;
+		long right = markk->xcol;
+		q = pdup(markb);
+		while (q->byte < markk->byte) {
+			/* Skip until we're within columns */
+			while (q->byte < markk->byte && square && (piscol(q) < left || piscol(q) >= right))
+				pgetc(q);
+
+			/* Copy text into buffer */
+			while (q->byte < markk->byte && (!square || (piscol(q) >= left && piscol(q) < right))) {
+				*s++ = pgetc(q);
+			}
+			/* Add a new line if we went past right edge of column */
+			if (square && q->byte<markk->byte && piscol(q) >= right)
+				*s++ = '\n';
+		}
+		prm(q);
+		*s = 0;
+		return buf;
+	} else
+		return 0;
+}
