@@ -49,5 +49,6 @@ int ulower PARAMS((BW *bw));
 int uupper PARAMS((BW *bw));
 extern int nstack;
 int blksum PARAMS((double *,double *));
+unsigned char *blkget();
 
 #endif
